--- a/index.html
+++ b/index.html
@@ -66,23 +66,20 @@
         <h1 class="mb-0">Abdelhak 
           <span class="text-primary">Mahmoudi</span>
         </h1>
-        <div class="subheading mb-5"> IMIARF Laboratory, Ecole Normale Superieure, Mohammed V University, Rabat, Morocco.
+        <div class="subheading mb-5"> IMIARF Laboratory, Ecole Normale Supèrieure, Mohammed V University, Rabat, Morocco.
           <a href="mailto:name@email.com">abdelhak.mahmoudi@um5.ac.ma</a> <br>
           <a href="">(+212)670-536-341</a>
         </div>
         <p class="lead mb-5">Abdelhak Mahmoudi is Associate Professor (Professeur Habilité) at the Department of Computer Science of Ecole Normale Supérieure (ENS-Rabat) of Mohammed V University. He is a researcher at Laboratoire d’Informatique, Mathématique Appliquée, Intelligence Artificielle et reconnaissance de Formes (LIMIARF) since 2007. In 2010, he was involved in the Neuromed project under the 7th Framework at Institut de Neurosciences de la Timone (INT) (Marseille, France) and joined, in 2014, as a Postdoc Researcher, a Partnerships for Enhanced Engagement in Research (PEER) project administered by the United State National Academy of Sciences (NAS). Abdelhak’s main research area is machine learning, and most of his work is in the deep learning applied to real world problems.</p>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/abdelhak-mahmoudi-754a6820/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/AbdelMahm">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#">
+          <a href="https://twitter.com/AbdelhakMahm">
             <i class="fab fa-twitter"></i>
-          </a>
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
           </a>
         </div>
       </div>
@@ -96,45 +93,34 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">Associate Professor</h3>
+            <div class="subheading mb-3">Ecole Normale Supérieure de Rabat</div>
+            <p>more..</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">2015 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <h3 class="mb-0">PostDoc</h3>
+            <div class="subheading mb-3">MINE-Rabat</div>
+            <p>more..</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">2014 - 2015</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting hhh operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <h3 class="mb-0">Research Engineer</h3>
+            <div class="subheading mb-3">INCM-CNRST</div>
+            <p>more..</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary">2010 - 2011</span>
           </div>
         </div>
 
@@ -150,24 +136,61 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">Deep Learning and Applications</h3>
+            <div class="subheading mb-3">INPT, FSR</div>
+            <div> Masters and Engineering Students</div>
+            <p>more..</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">2018 - Present</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">Machine Learning and Applications</h3>
+            <div class="subheading mb-3">INPT, FSR, ENSIAS</div>
+            <div>Masters and Engineering Students</div>
+            <p>more..</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">2015 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Natural Language Processing and Applications</h3>
+            <div class="subheading mb-3">FSR</div>
+            <div>Master Students</div>
+            <p>more..</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2020 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Data Journalisme</h3>
+            <div class="subheading mb-3">INPT</div>
+            <div>Master Students</div>
+            <p>more..</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2018 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Object Oriented Programming</h3>
+            <div class="subheading mb-3">ENS</div>
+            <div>BSc Students</div>
+            <p>more..</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2015 - Present</span>
           </div>
         </div>
 
@@ -182,24 +205,29 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <h3 class="mb-0">Deep Learning for Computer Vision</h3>
+            <div class="subheading mb-3">Title Project</div>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">Deep Learning for Language</h3>
+            <div class="subheading mb-3">Title Project</div>
           </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Deep Learning for Time Series</h3>
+            <div class="subheading mb-3">Title Project</div>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Deep Learning for Internet of Things</h3>
+            <div class="subheading mb-3">Title Project</div>
           </div>
         </div>
 
@@ -211,61 +239,66 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="publications">
       <div class="w-100">
         <h2 class="mb-5">Publications</h2>
-
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="list-inline dev-icons">
+        <div class="subheading mb-3">Journals</div>
+        <ul>
           <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
+            <p>Youness Choubik, Abdelhak Mahmoudi, Mohammed Majid Himmi and Lahcen El Moudnib. STA/LTA trigger algorithm implementation on a seismological dataset using Hadoop MapReduce. (link)</p>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
+            <p>Hanane Arahmane, Abdelhak Mahmoudi, El Mehdi Hamzaoui, Yann Ben Maissa, and Rajaa Cherkaoui El Moursli. Neutron-gamma discrimination based on support vector machine combined to nonnegative matrix factorization and continuous wavelet transform. Measurement, 149 :106958, 2020. (link)</p>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
+            <p>Abdelhak Mahmoudi, Fakhita Regragui. Synthetic minority oversampling and linear crossvalidated support vector machine-based recursive feature elimination to classify weld flaws in radiographic images. Materials Evaluation. 2015;73 (2) :186-197. (link)</p>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
+            <p>Abdelhak Mahmoudi, Sylvain Takerkart, Fakhita Regragui, Driss Boussaoud, Andrea Brovelli. Multivoxel Pattern Analysis for fMRI Data: A Review. Computational and Mathematical Methods in Medicine. 2012;2012 :1–14. (link)</p>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-react"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-less"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
+            <p>Fatima Eddaoudi, Fakhita Regragui, Abdelhak Mahmoudi, Najib Lamouri. Masses detection using SVM classifier based on textures analysis. Applied Mathematical Sciences. 2011;5 (5-8) :367-379. (link)</p>
           </li>
         </ul>
-
-        <div class="subheading mb-3">Workflow</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
+        
+        <div class="subheading mb-3">Conferences</div>
+        <ul>
+          <li class="list-inline-item">
+            <p>Ferdaous Idlahcen, Abdelhak Mahmoudi and Mohammed Majid Himmi.  Cnn-Based Approach for Cervical Cancer Classification in Whole-Slide Histopathology Images. To Appear in ICLR 2020 AI4CC workshop.</p>
+          </li>
+          <li class="list-inline-item">
+            <p>b.	Salma El Anigri, Abdelhak Mahmoudi and Mohammed Majid Himmi. Towards A Sign Language Gloss Representation Of Modern Standard Arabic. To Appear in ICLR 2020 AfricaNLP workshop.</p>
+          </li>
+          <li class="list-inline-item">
+            <p>c.	Redouan Ezzahir, Hajar Ait Addi and A. Mahmoudi. Three-level binary tree structure for sentiment classification in Arabic text. To appear in proceedings of NISS 2020.</p>
+          </li>
+          <li class="list-inline-item">
+            <p>d.	Mohamed El-Kaddoury, Abdelhak Mahmoudi, and Mohammed Majid Himmi. Deep generative models for image generation: A practical comparison between variational autoencoders and generative adversarial networks. In Mobile, Secure, and Programmable Networking - 5th International Conference, MSPN 2019, Mohammedia, Morocco, April 23-24, 2019, Revised Selected Papers, pages 1–8, 2019. (link)</p>
+          </li>
+          <li class="list-inline-item">
+            <p>e.	Arahmane Hanane, El Mehdi Hamzaoui, Abdelhak Mahmoudi and Rajaa Cherkaoui Elmoursli. Time-Scale Characterization of Neutron and Gamma Signals Using Continuous Wavelet Transform. ISIVC, 2018. (link)</p>
+          </li>
+          <li class="list-inline-item">
+            <p>f.	Marouane Benmoussa and Abdelhak Mahmoudi. Machine Learning for Hand Gesture Recognition Using Bag-of-words, to be published in Proceedings of the IEEE ISCV’2018 Conference April 2-4, 2018. (link)</p>
+          </li>
+          <li class="list-inline-item">
+            <p>g.	Marouane Hamda and Abdelhak Mahmoudi. Hand Gesture Recognition Using Kinect's Geometric and HOG Features, in Proceedings of the 2Nd International Conference on Big Data, Cloud and Applications. New York, NY, USA: ACM ; 2017 :48:1–48:5. (link)</p>
+          </li>
+          <li class="list-inline-item">
+            <p>h.	Youness Choubik and Abdelhak Mahmoudi. Machine Learning for Real Time Poses Classification Using Kinect Skeleton Data. Proceedings - Computer Graphics, Imaging and Visualization: New Techniques and Trends, CGiV 2016. 2016 :307-311. (link)</p>
+          </li>
+          <li class="list-inline-item">
+            <p>i.	Salma Tayeb, Abdelhak Mahmoudi, Fakhita Regragui and Mohammed Majid Himmi. Efficient detection of P300 using Kernel PCA and support vector machine. 2014 2nd World Conference on Complex Systems, WCCS 2014. 2015 :17-22. (link)</p>
+          </li>
+          <li class="list-inline-item">
+            <p>j.	Abdelhak Mahmoudi, Fakhita Regragui. A fast segmentation method for defects detection in radiographic images of welds. 2009 IEEE/ACS International Conference on Computer Systems and Applications, AICCSA 2009. 2009 :857-860. (link)</p>
+          </li>
+          <li class="list-inline-item">
+            <p>k.	Abdelhak Mahmoudi, Fakhita Regragui. Welding defect detection by segmentation of radiographic images. 2009 WRI World Congress on Computer Science and Information Engineering, CSIE 2009. 2009;7 :111-115. (link)</p>
+          </li>
+          <li class="list-inline-item">
+            <p>l.	Abdelhak Mahmoudi, Fakhita Regragui, Fatima Eddaoudi, El Houssine Bouyakhf. and Himmi M.M. A Novel Method for Welding Defects Detection in Radiographic Images, 4th International Symposium on Image/Video Communications over fixed and mobile networks (ISIVC’2008), Spain. (link</p>
+          </li>
+          <li class="list-inline-item">
+            <p>m.	Abdelhak Mahmoudi and Fakhita Regragui. Local Thresholding Towards Defect Detection in Radiographic Images of Welds, 2ème Journées Scientifiques en Technologie de l'Information et de la Communication (JOSTIC’2008), Morocco. (link)</p>
+          </li>
         </ul>
       </div>
     </section>
@@ -278,30 +311,12 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
+            2019 Africa Innovation Award of Artificial intelligence for Development (AI4D) in Africa.
+          </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
+            1<sup>st</sup> Place - 2018 Moroccan Award of Research and Innovation in Disabilities.
+          </li>
         </ul>
       </div>
     </section>
