--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <a href="mailto:name@email.com">abdelhak.mahmoudi@um5.ac.ma</a> <br>
           <a href="">(+212)670-536-341</a>
         </div>
-        <p class="lead mb-5">Abdelhak Mahmoudi is Associate Professor (Professeur Habilité) at the Department of Computer Science of Ecole Normale Supérieure (ENS-Rabat) of Mohammed V University. He is a researcher at Laboratoire d’Informatique, Mathématique Appliquée, Intelligence Artificielle et reconnaissance de Formes (LIMIARF) since 2007. In 2010, he was involved in the Neuromed project under the 7th Framework at Institut de Neurosciences de la Timone (INT) (Marseille, France) and joined, in 2014, as a Postdoc Researcher, a Partnerships for Enhanced Engagement in Research (PEER) project administered by the United State National Academy of Sciences (NAS). Abdelhak’s main research area is machine learning, and most of his work is in the deep learning applied to real world problems.</p>
+        <p class="lead mb-5">Associate Professor (Professeur Habilité) at the Department of Computer Science of Ecole Normale Supérieure (ENS-Rabat) of Mohammed V University, Abdelhak is a researcher at Laboratoire d’Informatique, Mathématique Appliquée, Intelligence Artificielle et reconnaissance de Formes (LIMIARF) since 2007. In 2010, he was involved in the Neuromed project under the 7th Framework at Institut de Neurosciences de la Timone (INT) (Marseille, France) and joined, in 2014, as a Postdoc Researcher, a Partnerships for Enhanced Engagement in Research (PEER) project administered by the United State National Academy of Sciences (NAS). Abdelhak’s main research area is machine learning, and most of his work is in the deep learning applied to real world problems.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/abdelhak-mahmoudi-754a6820/">
             <i class="fab fa-linkedin-in"></i>
@@ -264,40 +264,74 @@
             <p>Ferdaous Idlahcen, Abdelhak Mahmoudi and Mohammed Majid Himmi.  Cnn-Based Approach for Cervical Cancer Classification in Whole-Slide Histopathology Images. To Appear in ICLR 2020 AI4CC workshop.</p>
           </li>
           <li class="list-inline-item">
-            <p>b.	Salma El Anigri, Abdelhak Mahmoudi and Mohammed Majid Himmi. Towards A Sign Language Gloss Representation Of Modern Standard Arabic. To Appear in ICLR 2020 AfricaNLP workshop.</p>
+            <p>Salma El Anigri, Abdelhak Mahmoudi and Mohammed Majid Himmi. Towards A Sign Language Gloss Representation Of Modern Standard Arabic. To Appear in ICLR 2020 AfricaNLP workshop.</p>
           </li>
           <li class="list-inline-item">
-            <p>c.	Redouan Ezzahir, Hajar Ait Addi and A. Mahmoudi. Three-level binary tree structure for sentiment classification in Arabic text. To appear in proceedings of NISS 2020.</p>
+            <p>Redouan Ezzahir, Hajar Ait Addi and A. Mahmoudi. Three-level binary tree structure for sentiment classification in Arabic text. To appear in proceedings of NISS 2020.</p>
           </li>
           <li class="list-inline-item">
-            <p>d.	Mohamed El-Kaddoury, Abdelhak Mahmoudi, and Mohammed Majid Himmi. Deep generative models for image generation: A practical comparison between variational autoencoders and generative adversarial networks. In Mobile, Secure, and Programmable Networking - 5th International Conference, MSPN 2019, Mohammedia, Morocco, April 23-24, 2019, Revised Selected Papers, pages 1–8, 2019. (link)</p>
+            <p>Mohamed El-Kaddoury, Abdelhak Mahmoudi, and Mohammed Majid Himmi. Deep generative models for image generation: A practical comparison between variational autoencoders and generative adversarial networks. In Mobile, Secure, and Programmable Networking - 5th International Conference, MSPN 2019, Mohammedia, Morocco, April 23-24, 2019, Revised Selected Papers, pages 1–8, 2019. (link)</p>
           </li>
           <li class="list-inline-item">
-            <p>e.	Arahmane Hanane, El Mehdi Hamzaoui, Abdelhak Mahmoudi and Rajaa Cherkaoui Elmoursli. Time-Scale Characterization of Neutron and Gamma Signals Using Continuous Wavelet Transform. ISIVC, 2018. (link)</p>
+            <p>Arahmane Hanane, El Mehdi Hamzaoui, Abdelhak Mahmoudi and Rajaa Cherkaoui Elmoursli. Time-Scale Characterization of Neutron and Gamma Signals Using Continuous Wavelet Transform. ISIVC, 2018. (link)</p>
           </li>
           <li class="list-inline-item">
-            <p>f.	Marouane Benmoussa and Abdelhak Mahmoudi. Machine Learning for Hand Gesture Recognition Using Bag-of-words, to be published in Proceedings of the IEEE ISCV’2018 Conference April 2-4, 2018. (link)</p>
+            <p>Marouane Benmoussa and Abdelhak Mahmoudi. Machine Learning for Hand Gesture Recognition Using Bag-of-words, to be published in Proceedings of the IEEE ISCV’2018 Conference April 2-4, 2018. (link)</p>
           </li>
           <li class="list-inline-item">
-            <p>g.	Marouane Hamda and Abdelhak Mahmoudi. Hand Gesture Recognition Using Kinect's Geometric and HOG Features, in Proceedings of the 2Nd International Conference on Big Data, Cloud and Applications. New York, NY, USA: ACM ; 2017 :48:1–48:5. (link)</p>
+            <p>Marouane Hamda and Abdelhak Mahmoudi. Hand Gesture Recognition Using Kinect's Geometric and HOG Features, in Proceedings of the 2Nd International Conference on Big Data, Cloud and Applications. New York, NY, USA: ACM ; 2017 :48:1–48:5. (link)</p>
           </li>
           <li class="list-inline-item">
-            <p>h.	Youness Choubik and Abdelhak Mahmoudi. Machine Learning for Real Time Poses Classification Using Kinect Skeleton Data. Proceedings - Computer Graphics, Imaging and Visualization: New Techniques and Trends, CGiV 2016. 2016 :307-311. (link)</p>
+            <p>Youness Choubik and Abdelhak Mahmoudi. Machine Learning for Real Time Poses Classification Using Kinect Skeleton Data. Proceedings - Computer Graphics, Imaging and Visualization: New Techniques and Trends, CGiV 2016. 2016 :307-311. (link)</p>
           </li>
           <li class="list-inline-item">
-            <p>i.	Salma Tayeb, Abdelhak Mahmoudi, Fakhita Regragui and Mohammed Majid Himmi. Efficient detection of P300 using Kernel PCA and support vector machine. 2014 2nd World Conference on Complex Systems, WCCS 2014. 2015 :17-22. (link)</p>
+            <p>Salma Tayeb, Abdelhak Mahmoudi, Fakhita Regragui and Mohammed Majid Himmi. Efficient detection of P300 using Kernel PCA and support vector machine. 2014 2nd World Conference on Complex Systems, WCCS 2014. 2015 :17-22. (link)</p>
           </li>
           <li class="list-inline-item">
-            <p>j.	Abdelhak Mahmoudi, Fakhita Regragui. A fast segmentation method for defects detection in radiographic images of welds. 2009 IEEE/ACS International Conference on Computer Systems and Applications, AICCSA 2009. 2009 :857-860. (link)</p>
+            <p>Abdelhak Mahmoudi, Fakhita Regragui. A fast segmentation method for defects detection in radiographic images of welds. 2009 IEEE/ACS International Conference on Computer Systems and Applications, AICCSA 2009. 2009 :857-860. (link)</p>
           </li>
           <li class="list-inline-item">
-            <p>k.	Abdelhak Mahmoudi, Fakhita Regragui. Welding defect detection by segmentation of radiographic images. 2009 WRI World Congress on Computer Science and Information Engineering, CSIE 2009. 2009;7 :111-115. (link)</p>
+            <p>Abdelhak Mahmoudi, Fakhita Regragui. Welding defect detection by segmentation of radiographic images. 2009 WRI World Congress on Computer Science and Information Engineering, CSIE 2009. 2009;7 :111-115. (link)</p>
           </li>
           <li class="list-inline-item">
-            <p>l.	Abdelhak Mahmoudi, Fakhita Regragui, Fatima Eddaoudi, El Houssine Bouyakhf. and Himmi M.M. A Novel Method for Welding Defects Detection in Radiographic Images, 4th International Symposium on Image/Video Communications over fixed and mobile networks (ISIVC’2008), Spain. (link</p>
+            <p>Abdelhak Mahmoudi, Fakhita Regragui, Fatima Eddaoudi, El Houssine Bouyakhf. and Himmi M.M. A Novel Method for Welding Defects Detection in Radiographic Images, 4th International Symposium on Image/Video Communications over fixed and mobile networks (ISIVC’2008), Spain. (link</p>
           </li>
           <li class="list-inline-item">
-            <p>m.	Abdelhak Mahmoudi and Fakhita Regragui. Local Thresholding Towards Defect Detection in Radiographic Images of Welds, 2ème Journées Scientifiques en Technologie de l'Information et de la Communication (JOSTIC’2008), Morocco. (link)</p>
+            <p>Abdelhak Mahmoudi and Fakhita Regragui. Local Thresholding Towards Defect Detection in Radiographic Images of Welds, 2ème Journées Scientifiques en Technologie de l'Information et de la Communication (JOSTIC’2008), Morocco. (link)</p>
+          </li>
+        </ul>
+
+        <div class="subheading mb-3">Theses</div>
+        <ul>
+          <li class="list-inline-item">
+            <p>Thesis (link)</p>          
+          </li>
+          <li class="list-inline-item">
+            <p>Habilitation (link)</p>
+          </li>
+        </ul>
+        <div class="subheading mb-3">Talks</div>
+        <ul>
+          <li class="list-inline-item">
+            <p>Google I/O Extended</p>
+          </li>
+          <li class="list-inline-item">
+            <p>INSEA Village 2.0</p>
+          </li>
+        </ul>
+        <div class="subheading mb-3">Videos</div>
+        <ul>
+          <li class="list-inline-item">
+            <p>AI4D</p>
+          </li>
+          <li class="list-inline-item">
+            <p>Youness Choubik</p>
+          </li>
+          <li class="list-inline-item">
+            <p>Marouane Hamda</p>
+          </li>
+          <li class="list-inline-item">
+            <p>Marouane Benmoussa</p>
           </li>
         </ul>
       </div>
