--- a/index.html
+++ b/index.html
@@ -304,10 +304,10 @@
         <div class="subheading mb-3">Theses</div>
         <ul>
           <li class="list-inline-item">
-            <p>Thesis (link)</p>          
+            <p>Thesis (https://github.com/AbdelMahm/personal/raw/gh-pages/pdf/thesis.pdf)</p>          
           </li>
           <li class="list-inline-item">
-            <p>Habilitation (link)</p>
+            <p>Habilitation (https://github.com/AbdelMahm/personal/raw/gh-pages/pdf/habilitation.pdf)</p>
           </li>
         </ul>
         <div class="subheading mb-3">Talks</div>
