--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Associate Professor</h3>
+            <h3 class="mb-0">Associate (Habilité) Professor</h3>
             <div class="subheading mb-3">Ecole Normale Supérieure de Rabat</div>
             <p>more..</p>
           </div>
