--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                       Supervised Learning
                     </div>
                     <div class="card-body">
-                      <p class="card-text"> Linear Regression, Logistic Regression, Support Vector Machines, Trees, ANN</p>
+                      <p class="card-text"> Linear Regression, Logistic Regression, Naive Bayes, Support Vector Machines, Trees, ANN</p>
                       <a href="https://github.com/AbdelMahm">
                         <i class="fab fa-github"></i>
                       </a>
