--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <meta name="author" content="">
 
   <title>Abdelhak Mahmoudi</title>
-
+  <!-- favicon -->
+  <link rel="icon" href="img/favicon.png">
+  
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
