--- a/index.html
+++ b/index.html
@@ -640,7 +640,9 @@
               <p>
                 Youness Choubik, Abdelhak Mahmoudi, Mohammed Majid Himmi and
                 Lahcen El Moudnib. STA/LTA trigger algorithm implementation on a
-                seismological dataset using Hadoop MapReduce. (link)
+                seismological dataset using Hadoop MapReduce.IAES International
+                Journal of Artificial Intelligence, 2020, 9(2), pp. 269-275.
+                (link)
               </p>
             </li>
             <li class="list-inline-item">
@@ -698,9 +700,10 @@
             </li>
             <li class="list-inline-item">
               <p>
-                Redouan Ezzahir, Hajar Ait Addi and A. Mahmoudi. Three-level
+                Hajar Ait Addi, Redouan Ezzahir and A. Mahmoudi. Three-level
                 binary tree structure for sentiment classification in Arabic
-                text. To appear in proceedings of NISS 2020.
+                text. ACM International Conference Proceeding Series, 2020.
+                (link)
               </p>
             </li>
             <li class="list-inline-item">
