--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             Neurosciences de la Timone (INT) (Marseille, France) and joined, in
             2014, as a Postdoc Researcher, a Partnerships for Enhanced
             Engagement in Research (PEER) project administered by the United
-            State National Academy of Sciences (NAS). Abdelhak’s main research
+            State National Academy of Sciences (NAS). Abdelhak co-founded Deepecho.io, a healthtech startup building AI product for antenatal diagnosis. Abdelhak’s main research
             area is machine learning, and most of his work is in the deep
             learning applied to real world problems.
           </p>
