--- a/index.html
+++ b/index.html
@@ -95,18 +95,7 @@
       >
         <div class="w-100">
           <p class="lead mb-5">
-            Abdelhak Mahmoudi is an Associate Professor at the Department of
-            Computer Science of Ecole Normale Supérieure (ENS-Rabat) of Mohammed
-            V University. He is a researcher at Laboratoire d’Informatique,
-            Mathématique Appliquée, Intelligence Artificielle et reconnaissance
-            de Formes (LIMIARF) since 2007. In 2010, Abdelhak was involved in
-            the Neuromed project under the 7th Framework at Institut de
-            Neurosciences de la Timone (INT) (Marseille, France) and joined, in
-            2014, as a Postdoc Researcher, a Partnerships for Enhanced
-            Engagement in Research (PEER) project administered by the United
-            State National Academy of Sciences (NAS). Abdelhak co-founded Deepecho.io, a healthtech startup building AI product for antenatal diagnosis. Abdelhak’s main research
-            area is machine learning, and most of his work is in the deep
-            learning applied to real world problems.
+            Abdelhak is Associate Professor of computer science and permanent researcher at L'IMIARF Laboratory at Mohammed V University (Rabat, Morocco). His main research involves ML/DL in computer vision and natural language processing applied to healthcare. In 2021, Abdelhak co-founded Deepecho, a healthtech startup building AI product for antenatal diagnosis. In 2014, he joined, as a postdoc ML researcher, the Partnerships for Enhanced Engagement in Research (PEER) project administered by the U.S. National Academy of Sciences (NAS). In 2010, he worked as a machine learning research engineer at CNRS (Marseille, France) under the Neuromed project in the 7th European Framework.
           </p>
 
           <div class="subheading mb-5">
