--- a/index.html
+++ b/index.html
@@ -155,6 +155,23 @@
             class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5"
           >
             <div class="resume-content">
+              <h3 class="mb-0">Co-Founder and CTO</h3>
+              <div class="subheading mb-3">
+                Deepecho
+              </div>
+              <p>
+                Building AI product for antenatal diagnosis.
+              </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">2021 - Present</span>
+            </div>
+          </div>
+          
+          <div
+            class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5"
+          >
+            <div class="resume-content">
               <h3 class="mb-0">PostDoc</h3>
               <div class="subheading mb-3">MINE-Rabat</div>
               <p>
